--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.MDCPractice.LoginActivity">
+        <item name="colorPrimary">@color/lipstick_red</item>
+    </style>
+
     <style name="Theme.MDCPractice.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.MDCPractice.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
