--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="card_elevation_default">8dp</dimen>
     <dimen name="button_elevation_default">8dp</dimen>
     <dimen name="margin_double">16dp</dimen>
+    <dimen name="img_url_height">200dp</dimen>
 </resources>
