--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MDCPractice" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MDCPractice" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -19,9 +19,6 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.MDCPractice.LoginActivity">
-        <item name="colorPrimary">@color/lipstick_red</item>
-    </style>
 
     <style name="Theme.MDCPractice.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
