--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="@dimen/margin_min"
             android:layout_marginTop="@dimen/margin_double"
             android:layout_marginEnd="@dimen/margin_min"
+            android:visibility="gone"
             app:cardElevation="@dimen/card_elevation_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -188,6 +189,7 @@
                     app:layout_constraintTop_toBottomOf="@id/divider" />
 
                 <TextView
+                    android:id="@+id/cardTextPreview"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_double"
@@ -196,6 +198,21 @@
                     android:text="@string/large_text"
                     app:layout_constraintStart_toStartOf="@id/tvSubtitle"
                     app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />
+
+                <com.google.android.material.button.MaterialButtonToggleGroup
+                    android:id="@+id/btnToggleGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cardTextPreview">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+
+                </com.google.android.material.button.MaterialButtonToggleGroup>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
